# vibeslol

./: .gitignore  CLAUDE.md  DEVICE_TESTING.md  PRD.md  SETUP_GUIDE.md  SETUP_PRODUCTION.md
backend/: .env.example  pyproject.toml  vibeslol.db
backend/alembic/: env.py
backend/alembic/versions/: 6891fab295f3_initial_schema.py
backend/app/: main.py  schemas.py
backend/app/api/: auth_routes.py  routes.py
backend/app/core/: auth.py  cache.py  config.py  database.py
backend/app/models/: __init__.py  block.py  comment.py  follow.py  like.py  report.py  user.py  video.py  video_view.py
backend/app/recommendations/: engine.py
backend/app/services/: storage.py
ios/Vibeslol.xcodeproj/: project.pbxproj
ios/Vibeslol/App/: VibeslolApp.swift
ios/Vibeslol/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/Vibeslol/Models/: Comment.swift  User.swift  Video.swift
ios/Vibeslol/Services/: APIClient.swift  AuthManager.swift  HapticsService.swift  KeychainService.swift  VideoPlayerManager.swift  VideoPreloader.swift
ios/Vibeslol/Utils/: Colors.swift
ios/Vibeslol/ViewModels/: CameraViewModel.swift  CommentViewModel.swift  FeedViewModel.swift  UserProfileViewModel.swift  VideoTrimmerViewModel.swift
ios/Vibeslol/Views/: CameraPreviewView.swift  CameraView.swift  CommentSheetView.swift  ContentView.swift  FeedView.swift  ProfileView.swift  ReportSheetView.swift  TabBarView.swift  UserProfileView.swift  VideoPlayerView.swift  VideoTrimmerView.swift
scripts/: generate_videos.py
